# qualitative-coding

./: .gitignore  .readthedocs.yaml  AGPL3.txt  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  TODO.md  demo.qdpx  paper.bib  paper.md  pyproject.toml  qc  requirements.txt  settings.py  setup.py  sys-qc
docs/: conf.py  index.rst  manuscript.rst
docs/_templates/: breadcrumbs.html
qualitative_coding/: __init__.py  cli.py  codebook.py  coding_ui.py  corpus.py  demo.qdpx  diff.py  editors.py  editors.toml  exceptions.py  helpers.py  logs.py  temp.py  testing.py  tree_node.py  user_input.py  viewer.py
qualitative_coding/cli/: __init__.py  check.py  click_aliases.py  code.py  codebook.py  coders.py  crosstab.py  decorators.py  export.py  find.py  import.py  import_media.py  init.py  list.py  memo.py  options.py  rename.py  stats.py  test.py  upgrade.py  version.py
qualitative_coding/cli/codes/: __init__.py  crosstab.py  find.py  list.py  rename.py  stats.py
qualitative_coding/cli/corpus/: __init__.py  anonymize.py  import_media.py  list.py  move.py  remove.py  update.py
qualitative_coding/database/: errors.py  models.py
qualitative_coding/media_importers/: __init__.py  base.py  pandoc.py  verbatim.py  vtt.py
qualitative_coding/migrations/: __init__.py  migration.py  migration_0_2_3.py  migration_1_0_0.py  migration_1_4_0.py
qualitative_coding/refi_qda/: nvivo_project.qdpx  reader.py  writer.py
qualitative_coding/tests/: fixtures.py  mock_editor.py  test_check.py  test_code.py  test_code_parsing.py  test_codebook.py  test_coders.py  test_codes_crosstab.py  test_codes_find.py  test_codes_list.py  test_codes_rename.py  test_codes_stats.py  test_corpus_anonymize.py  test_corpus_import.py  test_corpus_move.py  test_corpus_remove.py  test_corpus_update.py  test_crosstab.py  test_export.py  test_find.py  test_import.py  test_init.py  test_init_import.py  test_list.py  test_logs.py  test_memo.py  test_read_diff_offsets.py  test_refi_qda_writer.py  test_rename.py  test_stats.py  test_tree_node.py  test_upgrade.py  test_version.py
qualitative_coding/views/: coding_ui.py  styles.py  viewer.py
