[project]
name = "qualitative-coding"
version = "1.7.5"
description = "Qualitative coding tools to support computational thinking"
authors = [
    {name = "Chris Proctor",email = "chris@chrisproctor.net"}
]
license = {text = "AGPL3"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "semver (>=3.0.2,<4.0.0)",
    "xmlschema (>=3.4.3,<4.0.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "webvtt-py (>=0.5.1,<0.6.0)",
    "spacy (>=3.8.7,<4.0.0)"
]

[project.urls]
homepage = "https://qualitative-coding.readthedocs.io"
repository = "https://github.com/cproctor/qualitative-coding"

[project.scripts]
qc = "qualitative_coding.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
